[gd_scene load_steps=7 format=2]

[ext_resource path="res://laserBullet.png" type="Texture" id=1]
[ext_resource path="res://Bullet.gd" type="Script" id=2]
[ext_resource path="res://cicele.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.016, 6.40564 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.54321, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.791504, 0.736121, 0.0736283, 1, 1, 1, 1, 1 )

[sub_resource type="Curve" id=3]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[node name="Bullet" type="KinematicBody2D" groups=[
"bullet",
]]
light_mask = 2
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.47488, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -27.1516, 30.341 )
scale = Vector2( 0.3475, 0.26875 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 3 )
texture_scale = 2.0
color = Color( 0.960784, 0.835294, 0.0156863, 1 )
energy = 2.0

[node name="RedParticles" type="CPUParticles2D" parent="."]
modulate = Color( 0.847059, 0.164706, 0.0941176, 0.639216 )
emitting = false
amount = 10
lifetime = 0.25
preprocess = 0.5
emission_shape = 1
emission_sphere_radius = 10.0
direction = Vector2( 100, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 20.0
scale_amount = 10.0
color_ramp = SubResource( 2 )
hue_variation_curve = SubResource( 3 )

[node name="Lifespan" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="ParticleTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="Lifespan" to="." method="_on_Lifespan_timeout"]
[connection signal="timeout" from="ParticleTimer" to="." method="_on_ParticleTimer_timeout"]
